Updated menu to match site map from client
Signed-off-by: Alexander Davis <alex@adcm.uk>

--- a/main-site-export/team.html
+++ b/main-site-export/team.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Team - The Parish of Keresley with Coundon</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css?h=4d649c300ea439ef1f9fe3d14c0f3e24">
-    <link rel="stylesheet" href="assets/css/styles.min.css?h=f41fe1e9ef99020027ec88d4e1bdcb9f">
+    <link rel="stylesheet" href="assets/css/styles.min.css?h=b7c08c832d67caf20e5eb419f67a570c">
 </head>
 
 <body>
@@ -15,17 +15,31 @@
             <div class="collapse navbar-collapse" id="navcol-2">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item"><a class="nav-link" href="/index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="who-are-we">Who Are We</a></li>
-                    <li class="nav-item"><a class="nav-link" href="life-events">Life Events</a></li>
-                    <li class="nav-item"><a class="nav-link" href="hall-hire">Hall Hire</a></li>
-                    <li class="nav-item"><a class="nav-link" href="whats-on">What's On</a></li>
-                    <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown">Our Centres</a>
-                        <div class="dropdown-menu"><a class="dropdown-item" href="#">Pit Stop</a><a class="dropdown-item" href="#">Church Hall</a></div>
+                    <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown">About Us</a>
+                        <div class="dropdown-menu"><a class="dropdown-item" href="our-vision">Overview and Vision</a><a class="dropdown-item" href="meet-the-team">Meet The Team</a><a class="dropdown-item" href="your-first-visit">Your First Visit</a><a class="dropdown-item" href="services-and-prayer">Services and Prayer</a><a class="dropdown-item" href="exploring-faith">Exploring Faith</a><a class="dropdown-item" href="safeguarding">Safeguarding</a></div>
                     </li>
-                    <li class="nav-item"><a class="nav-link" href="churchyard">Churchyard</a></li>
+                    <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown">Life Events</a>
+                        <div class="dropdown-menu"><a class="dropdown-item" href="weddings">Weddings</a><a class="dropdown-item" href="baptisms-christenings">Baptisms/Christenings</a><a class="dropdown-item" href="funerals-memorials">Funerals/Memorials</a></div>
+                    </li>
+                    <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown">Hall Hire</a>
+                        <div class="dropdown-menu"><a class="dropdown-item" href="church-hall">Church Hall</a><a class="dropdown-item" href="pit-stop">Pit Stop</a><a class="dropdown-item" href="galilee-room">Galilee Room</a></div>
+                    </li>
+                    <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown">What's On</a>
+                        <div class="dropdown-menu"><a class="dropdown-item" href="regular-activities">Regular Activities</a><a class="dropdown-item" href="uniform-groups">Uniform Groups</a></div>
+                    </li>
+                    <li class="nav-item"><a class="nav-link" href="whats-on-seasonal">Seasonal What's On</a></li>
+                    <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown">Pit Stop/Church Hall</a>
+                        <div class="dropdown-menu"><a class="dropdown-item" href="pit-stop-church-hall/whats-on">What's On</a><a class="dropdown-item" href="pit-stop-church-hall/history">History</a></div>
+                    </li>
+                    <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown">Churchyard/Burials</a>
+                        <div class="dropdown-menu"><a class="dropdown-item" href="churchyard-burials/overview">Overview</a><a class="dropdown-item" href="churchyard-burials/overview">Maintenance</a></div>
+                    </li>
                     <li class="nav-item"><a class="nav-link" href="history">History</a></li>
+                    <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown">Support Us</a>
+                        <div class="dropdown-menu"><a class="dropdown-item" href="volunteer">Volunteer</a><a class="dropdown-item" href="giving">Giving</a></div>
+                    </li>
                     <li class="nav-item"><a class="nav-link" href="contact">Contact Us</a></li>
-                    <li class="nav-item"><a class="nav-link" href="support">Support Us</a></li>
+                    <li class="nav-item"></li>
                 </ul>
             </div>
         </div>
