--- a/main-site-export/index.html
+++ b/main-site-export/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Home - The Parish of Keresley with Coundon</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css?h=4d649c300ea439ef1f9fe3d14c0f3e24">
-    <link rel="stylesheet" href="assets/css/styles.min.css?h=f41fe1e9ef99020027ec88d4e1bdcb9f">
+    <link rel="stylesheet" href="assets/css/styles.min.css?h=b7c08c832d67caf20e5eb419f67a570c">
 </head>
 
 <body>
@@ -18,17 +18,31 @@
             <div class="collapse navbar-collapse" id="navcol-2">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item"><a class="nav-link active" href="/index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="who-are-we">Who Are We</a></li>
-                    <li class="nav-item"><a class="nav-link" href="life-events">Life Events</a></li>
-                    <li class="nav-item"><a class="nav-link" href="hall-hire">Hall Hire</a></li>
-                    <li class="nav-item"><a class="nav-link" href="whats-on">What's On</a></li>
-                    <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown">Our Centres</a>
-                        <div class="dropdown-menu"><a class="dropdown-item" href="#">Pit Stop</a><a class="dropdown-item" href="#">Church Hall</a></div>
+                    <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown">About Us</a>
+                        <div class="dropdown-menu"><a class="dropdown-item" href="our-vision">Overview and Vision</a><a class="dropdown-item" href="meet-the-team">Meet The Team</a><a class="dropdown-item" href="your-first-visit">Your First Visit</a><a class="dropdown-item" href="services-and-prayer">Services and Prayer</a><a class="dropdown-item" href="exploring-faith">Exploring Faith</a><a class="dropdown-item" href="safeguarding">Safeguarding</a></div>
                     </li>
-                    <li class="nav-item"><a class="nav-link" href="churchyard">Churchyard</a></li>
+                    <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown">Life Events</a>
+                        <div class="dropdown-menu"><a class="dropdown-item" href="weddings">Weddings</a><a class="dropdown-item" href="baptisms-christenings">Baptisms/Christenings</a><a class="dropdown-item" href="funerals-memorials">Funerals/Memorials</a></div>
+                    </li>
+                    <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown">Hall Hire</a>
+                        <div class="dropdown-menu"><a class="dropdown-item" href="church-hall">Church Hall</a><a class="dropdown-item" href="pit-stop">Pit Stop</a><a class="dropdown-item" href="galilee-room">Galilee Room</a></div>
+                    </li>
+                    <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown">What's On</a>
+                        <div class="dropdown-menu"><a class="dropdown-item" href="regular-activities">Regular Activities</a><a class="dropdown-item" href="uniform-groups">Uniform Groups</a></div>
+                    </li>
+                    <li class="nav-item"><a class="nav-link" href="whats-on-seasonal">Seasonal What's On</a></li>
+                    <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown">Pit Stop/Church Hall</a>
+                        <div class="dropdown-menu"><a class="dropdown-item" href="pit-stop-church-hall/whats-on">What's On</a><a class="dropdown-item" href="pit-stop-church-hall/history">History</a></div>
+                    </li>
+                    <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown">Churchyard/Burials</a>
+                        <div class="dropdown-menu"><a class="dropdown-item" href="churchyard-burials/overview">Overview</a><a class="dropdown-item" href="churchyard-burials/overview">Maintenance</a></div>
+                    </li>
                     <li class="nav-item"><a class="nav-link" href="history">History</a></li>
+                    <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown">Support Us</a>
+                        <div class="dropdown-menu"><a class="dropdown-item" href="volunteer">Volunteer</a><a class="dropdown-item" href="giving">Giving</a></div>
+                    </li>
                     <li class="nav-item"><a class="nav-link" href="contact">Contact Us</a></li>
-                    <li class="nav-item"><a class="nav-link" href="support">Support Us</a></li>
+                    <li class="nav-item"></li>
                 </ul>
             </div>
         </div>
@@ -262,43 +276,50 @@
             </div>
         </div>
     </section>
-    <footer class="bg-primary-gradient">
+    <footer class="text-white bg-primary">
         <div class="container py-4 py-lg-5">
             <div class="row justify-content-center">
                 <div class="col-sm-4 col-md-3 text-center text-lg-start d-flex flex-column">
                     <h3 class="fs-6 fw-bold">Services</h3>
                     <ul class="list-unstyled">
-                        <li><a href="#">Web design</a></li>
-                        <li><a href="#">Development</a></li>
-                        <li><a href="#">Hosting</a></li>
+                        <li><a class="link-light" href="#">Web design</a></li>
+                        <li><a class="link-light" href="#">Development</a></li>
+                        <li><a class="link-light" href="#">Hosting</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-4 col-md-3 text-center text-lg-start d-flex flex-column">
                     <h3 class="fs-6 fw-bold">About</h3>
                     <ul class="list-unstyled">
-                        <li><a href="#">Company</a></li>
-                        <li><a href="#">Team</a></li>
-                        <li><a href="#">Legacy</a></li>
+                        <li><a class="link-light" href="#">Company</a></li>
+                        <li><a class="link-light" href="#">Team</a></li>
+                        <li><a class="link-light" href="#">Legacy</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-4 col-md-3 text-center text-lg-start d-flex flex-column">
                     <h3 class="fs-6 fw-bold">Careers</h3>
                     <ul class="list-unstyled">
-                        <li><a href="#">Job openings</a></li>
-                        <li><a href="#">Employee success</a></li>
-                        <li><a href="#">Benefits</a></li>
+                        <li><a class="link-light" href="#">Job openings</a></li>
+                        <li><a class="link-light" href="#">Employee success</a></li>
+                        <li><a class="link-light" href="#">Benefits</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-3 text-center text-lg-start d-flex flex-column align-items-center order-first align-items-lg-start order-lg-last">
-                    <div class="fw-bold d-flex align-items-center mb-2"><span class="bs-icon-sm bs-icon-circle bs-icon-primary d-flex justify-content-center align-items-center me-2 bs-icon"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-bezier">
-                                <path fill-rule="evenodd" d="M0 10.5A1.5 1.5 0 0 1 1.5 9h1A1.5 1.5 0 0 1 4 10.5v1A1.5 1.5 0 0 1 2.5 13h-1A1.5 1.5 0 0 1 0 11.5zm1.5-.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zm10.5.5A1.5 1.5 0 0 1 13.5 9h1a1.5 1.5 0 0 1 1.5 1.5v1a1.5 1.5 0 0 1-1.5 1.5h-1a1.5 1.5 0 0 1-1.5-1.5zm1.5-.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zM6 4.5A1.5 1.5 0 0 1 7.5 3h1A1.5 1.5 0 0 1 10 4.5v1A1.5 1.5 0 0 1 8.5 7h-1A1.5 1.5 0 0 1 6 5.5zM7.5 4a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5z"></path>
-                                <path d="M6 4.5H1.866a1 1 0 1 0 0 1h2.668A6.517 6.517 0 0 0 1.814 9H2.5c.123 0 .244.015.358.043a5.517 5.517 0 0 1 3.185-3.185A1.503 1.503 0 0 1 6 5.5zm3.957 1.358A1.5 1.5 0 0 0 10 5.5v-1h4.134a1 1 0 1 1 0 1h-2.668a6.517 6.517 0 0 1 2.72 3.5H13.5c-.123 0-.243.015-.358.043a5.517 5.517 0 0 0-3.185-3.185z"></path>
-                            </svg></span><span>The Parish of Keresley with Coundon</span></div>
-                    <p class="text-muted">Sem eleifend donec molestie, integer quisque orci aliquam.</p>
+                    <div class="fw-bold d-flex align-items-center mb-2"><img src="assets/img/brands/MASTER%20PARISH%20LOGO%20white.png?h=b020af8caacb69febb02077fee969271" style="height: 5em;"></div>
+                    <p>Sem eleifend donec molestie, integer quisque orci aliquam.</p>
                 </div>
             </div>
             <hr>
-            <div class="text-muted d-flex justify-content-between align-items-center pt-3">
+            <nav class="navbar navbar-expand-md py-3">
+                <div class="container">
+                    <ul class="navbar-nav mx-auto">
+                        <li class="nav-item"><a class="nav-link text-white" href="safeguarding" style="border-right-style: solid;">Safeguarding</a></li>
+                        <li class="nav-item"><a class="nav-link text-white" href="privacy-policy">Privacy Policy</a></li>
+                        <li class="nav-item"><a class="nav-link text-white" href="copyright-policy">Copyright Policy</a></li>
+                        <li class="nav-item"><a class="nav-link text-white" href="cookie-policy">Cookie Policy</a></li>
+                    </ul>
+                </div>
+            </nav>
+            <div class="d-flex justify-content-between align-items-center pt-3">
                 <p class="mb-0">Copyright © 2025 The Parish of Keresley with Coundon</p>
                 <ul class="list-inline mb-0">
                     <li class="list-inline-item"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-facebook">
